5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4159/executions/1664_2971.log
== TEST (2019-04-16 10:13:51) 
-- CODE:
juros = float(input("juros ao mes: "))
ap = float(input("valor: "))
total = 1500*(1+juros)**36
print(round(total, 2)
if(total>=ap):
		print("Sim")
else:
		print("Nao")
-- ERROR:
File "XXXX", line 5
    if(total>=ap):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:15:03) 
-- CODE:
juros = float(input("juros ao mes: "))
ap = float(input("valor: "))
total = 1500*(1+juros)**36
print(round(total, 2)
if(total >= ap):
		print("Sim")
else:
		print("Nao")
-- ERROR:
File "XXXX", line 5
    if(total >= ap):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:15:53) 
-- CODE:
juros = float(input("juros ao mes: "))
ap = float(input("valor: "))
total = 1500*(1+juros)**36
print(round(total, 2)
if(ap <= total):
		print("Sim")
else:
		print("Nao")
-- ERROR:
File "XXXX", line 5
    if(ap <= total):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:16:37) 
-- CODE:
juros = float(input("juros ao mes: "))
ap = float(input("valor: "))
total = 1500*(1+juros)**36
if(ap <= total):
		print("Sim")
else:
		print("Nao")
-- OUTPUT:
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:18:08) 
-- CODE:
juros = float(input("juros ao mes: "))
ap = float(input("valor: "))
total = 1500*(1+juros)**36
if(total>=ap):
		print(round(total, 2))
		print("Sim")
else:
		print(round(total, 2))
		print("Nao")
-- OUTPUT:
14365502.76
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:18:41) 
-- CODE:
juros = float(input("juros ao mes: "))
ap = float(input("valor: "))
total = 1500*(1+juros)**36
if(total>=ap):
		print(round(total, 2))
		print("Sim")
else:
		print(round(total, 2))
		print("Nao")
-- EXECUTION TIME:
0.143314
-- TEST CASE 1:
---- input:
0.29
125250
---- correct output:
14365502.76
Sim
---- user output:
14365502.76
Sim
-- TEST CASE 2:
---- input:
0.15
300000
---- correct output:
229727.78
Nao
---- user output:
229727.78
Nao
-- TEST CASE 3:
---- input:
0.2
150000
---- correct output:
1063202.81
Sim
---- user output:
1063202.81
Sim
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
